got the isloaded logic correct