@@ -110,7 +110,7 @@
 						<threadCount>1</threadCount>
 						<reuseForks>false</reuseForks>
 						<forkMode>never</forkMode>
-						<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
+						
 						<suiteXmlFiles>
 							<suiteXmlFile>RunXML/DemoTest.xml</suiteXmlFile>
 						</suiteXmlFiles>
@@ -123,8 +123,8 @@
 					<artifactId>maven-compiler-plugin</artifactId>
 					<version>3.1</version>
 					<configuration>
-						<source>1.7</source>
-						<target>1.7</target>
+						<source>1.8</source>
+						<target>1.8</target>
 
 					</configuration>
 				</plugin>
